--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <script>
-        const SCRIPT_URL = "INSERISCI_URL_APPS_SCRIPT_QUI";
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyG0447RziNomDei1IsDEqVWhlhTdNijqCKeIRrjERDpghPKMrXIyuskMzXvUb55AJ2/exec";
         const urlParams = new URLSearchParams(window.location.search);
         const isCheckin = urlParams.has('checkin');
 
